Thu Aug 22 12:23:49 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/server.[ch], daemon/Makefile.am,
	  daemon/getvt.[ch], daemon/xdmcp.c, config/gdm.conf.in:
	  Make the vt member exist for non-linux systems as well just
	  for kicks.  Set up a vt allocation thingie (kind of a hack
	  to get a VT higher then a certain number, but oh well).  Currently
	  only for linux.  And add vt<number> arguments unless there
	  was such an argument added already.  This should fix all
	  the problems with people running gdm as a service since
	  all the VT stuff is so horribly broken.  Should fix #62997.
	  Adds two keys FirstVT and VTAllocation to control this
	  behaviour.

Tue Aug 20 10:28:45 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.8

Mon Aug 19 16:50:30 2002  George Lebl <jirka@5z.com>

	* gui/greeter/greeter_system.c: whack the redundant queries for
	  halt, reboot and suspend, we already have a dialog the person
	  answers.  Fixes #90971

	* gui/greeter/greeter_item_capslock.c: include libgnome.h

	* gui/gdmsetup.c: Listen for a property on the root window
	  _GDM_SETUP_INSENSITIVE and if non-zero make self insensitive

	* daemon/slave.c: when restarting the greeter set the above property
	  to make the setup be insensitive for a bit.  This makes sure the
	  user doesn't twiddle with the interface which could make things
	  weird looking, especially if the user twiddles greeter settings or
	  opens new windows.

Mon Aug 19 12:17:22 2002  George Lebl <jirka@5z.com>

	* pixmaps/gdm.png: my gf didn't like my other icon so of course ... I
	  had to make a different one.

Mon Aug 19 11:53:56 2002  George Lebl <jirka@5z.com>

	* gui/gdmXnestchooser.c: bind signals INT/TERM/HUP and send a SIGTERM
	  to the xnest when we get them.

Thu Aug 15 12:04:24 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/slave.c: remove some dead code.  Ensure euid's
	  in more places.  open .xsession-errors even on nfs dirs properly.