@@ -5,61 +5,63 @@
 # is used as a label in case gdm doesn't know this language personally,
 # else it's ignored.
 #
-# The format of this file is just like the locale.alias file, so you could
-# conceivably point gdm at your real locale.alias file if that's a better
-# indication of available languages on your system.  Note that the first word
-# cannot contain any spaces.
+# The format of this file is SIMILAR (but not the same to the locale.alias
+# format).  You could however point gdm at a real locale.alias and it would
+# still concievably work.  Note that the first word cannot contain any spaces.
+# The second word can be a comma separated list of locales to try.  GDM will
+# try if each locale exists and only if it does will it show that locale.  The
+# list is tried in order and the first working one is used.
 #
 #		- George
 
-Azerbaijani		az_AZ
-Arabic(Egypt)		ar_EG
-Arabic(Lebanon)		ar_LB
-Basque			eu_ES
-Bulgarian		bg_BG
-Catalan			ca_ES
-Chinese(simplified)	zh_CN
-Chinese(traditional)	zh_TW
-Croatian		hr_HR
-Czech			cs_CZ
-Danish			da_DK
-Dutch			nl_NL
-Estonian		et_EE
-English(American)	en_US
-English(Australian)	en_AU
-English(British)	en_GB
-English(Ireland)	en_IE
-Finnish			fi_FI
-French			fr_FR
-Galician		gl_ES
-German			de_DE
-Greek			el_GR
-Hebrew			he_IL
-Hungarian		hu_HU
-Icelandic		is_IS
-Irish			ga_IE
-Italian			it_IT
-Japanese		ja_JP
-Korean			ko_KR
-Latvian			lv_LV
-Lithuanian		lt_LT
-Macedonian		mk_MK
-Malay			ms_MY
-Norwegian(bokmal)	no_NO
-Norwegian(nynorsk)	nn_NO
-Polish			pl_PL
-Portuguese		pt_PT
-Portuguese(Brazilian)	pt_BR
-Romanian		ro_RO
-Russian			ru_RU
-Slovak			sk_SK
-Slovenian		sl_SI
-Spanish			es_ES
-Spanish(Mexico)		es_MX
-Swedish			sv_SE
-Swedish(Finland)	sv_FI
-Tamil			ta_IN
-Turkish			tr_TR
-Ukrainian		uk_UA
-Vietnamese		vi_VN
-Walloon			wa_BE
+Azerbaijani		az_AZ.utf8,az_AZ
+Arabic(Egypt)		ar_EG.utf8,ar_EG
+Arabic(Lebanon)		ar_LB.utf8,ar_LB
+Basque			eu_ES.utf8,eu_ES
+Bulgarian		bg_BG.utf8,bg_BG
+Catalan			ca_ES.utf8,ca_ES
+Chinese(simplified)	zh_CN.utf8,zh_CN
+Chinese(traditional)	zh_TW.utf8,zh_TW
+Croatian		hr_HR.utf8,hr_HR
+Czech			cs_CZ.utf8,cs_CZ
+Danish			da_DK.utf8,da_DK
+Dutch			nl_NL.utf8,nl_NL
+Estonian		et_EE.utf8,et_EE
+English(American)	en_US.utf8,en_US
+English(Australian)	en_AU.utf8,en_AU
+English(British)	en_GB.utf8,en_GB
+English(Ireland)	en_IE.utf8,en_IE
+Finnish			fi_FI.utf8,fi_FI
+French			fr_FR.utf8,fr_FR
+Galician		gl_ES.utf8,gl_ES
+German			de_DE.utf8,de_DE
+Greek			el_GR.utf8,el_GR
+Hebrew			he_IL.utf8,he_IL
+Hungarian		hu_HU.utf8,hu_HU
+Icelandic		is_IS.utf8,is_IS
+Irish			ga_IE.utf8,ga_IE
+Italian			it_IT.utf8,it_IT
+Japanese		ja_JP.utf8,ja_JP
+Korean			ko_KR.utf8,ko_KR
+Latvian			lv_LV.utf8,lv_LV
+Lithuanian		lt_LT.utf8,lt_LT
+Macedonian		mk_MK.utf8,mk_MK
+Malay			ms_MY.utf8,ms_MY
+Norwegian(bokmal)	no_NO.utf8,no_NO
+Norwegian(nynorsk)	nn_NO.utf8,nn_NO
+Polish			pl_PL.utf8,pl_PL
+Portuguese		pt_PT.utf8,pt_PT
+Portuguese(Brazilian)	pt_BR.utf8,pt_BR
+Romanian		ro_RO.utf8,ro_RO
+Russian			ru_RU.utf8,ru_RU
+Slovak			sk_SK.utf8,sk_SK
+Slovenian		sl_SI.utf8,sl_SI
+Spanish			es_ES.utf8,es_ES
+Spanish(Mexico)		es_MX.utf8,es_MX
+Swedish			sv_SE.utf8,sv_SE
+Swedish(Finland)	sv_FI.utf8,sv_FI
+Tamil			ta_IN.utf8,ta_IN
+Turkish			tr_TR.utf8,tr_TR
+Ukrainian		uk_UA.utf8,uk_UA
+Vietnamese		vi_VN.utf8,vi_VN
+Walloon			wa_BE.utf8,wa_BE
